--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,46 @@
-
-nav {
+.nav {
+  list-style-type: none;
   display: flex;
-  flex-direction: row;
-  background-color: rgb(0, 132, 255);
+  padding: 0 0 0 10px;
+  margin: 0;
+  background-color: rgb(65, 131, 255);
   color: white;
+  height: 70px;
+  align-items: center;
 }
 
-nav > div {
-  flex: 1rem;
-  padding: 10px;
-  justify-content: space-between;
+#title {
+  font-size: 35px;
 }
 
-#header {
-  background-color: gray;
+.nav li {
+  flex: 25%;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  font-weight: bold;
+}
+
+a:active {
+  font-weight: bold;
 }
 
 .create-user {
   display: flex;
-  border: 1px solid gray;
-  justify-content: center;
+  border: 1px solid rgb(63, 63, 63);
+  width: 550px;
+  height: 200px;
 }
-.left {
-  justify-content: flex-start;
-  border: 2px solid blue;
-  margin: 10px;
+
+.sub-title {
+  color: gray;
+}
+.create-user div {
+  display: flex;
+  height: 30px;
 }
