--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
   display: flex;
   padding: 0 0 0 10px;
   margin: 0;
-  background-color: rgb(65, 131, 255);
+  background-color: dodgerblue;
   color: white;
   height: 70px;
   align-items: center;
