--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,17 @@
 
 nav li:first-child {
   font-size: 35px;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
 }
 
 .nav li {
-  flex: calc(100% / 3 - 2rem);
+  flex: 1;
+  display: flex;
+  justify-content: center;
 }
 
+/* Modified link visual responses */
 a {
   color: white;
   text-decoration: none;
@@ -41,13 +46,12 @@ body h1 {
 body > div {
   flex-basis: 50%;
   margin: 0;
-  /* padding: 10px 10px 20px 10px; */
   display: flex;
   justify-content: center;
 }
 
 .box {
-  width: 550px;
+  width: 600px;
   border: 1px solid black;
   padding: 18px;
   border-radius: 4px;
@@ -69,13 +73,13 @@ body > div {
   font-weight: bold;
 }
 
-/* .row input, select {
-  background-color: red;
-} */
-
 .center {
   display: flex;
   justify-content: center;
+}
+
+input[type='text'] {
+  color: grey;
 }
 
 input[type='text'], select[id='department'] {
@@ -96,29 +100,23 @@ input[type='submit'] {
   color: white;
 }
 
-/* input[type='reset'], input[type='submit'] {
-  justify-content: flex-end;
-} */
-
 .card-display {
   display: flex;
-  flex-flow: row wrap;
+  flex-wrap: wrap;
+  justify-content: flex-start;
 }
 
 .cards {
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex-wrap: wrap;
-  width: calc(100% / 3 - 2rem);
-  /* justify-content: flex-start; */
+  width: 450px;
   border: 1px solid gray;
   padding-top: 8px;
   margin: 10px;
   border: 1px solid black;
   border-radius: 15px;
   color: rgb(100, 100, 100);
-  /* padding: 5px; */
 }
 
 .cards h4, p {
@@ -129,4 +127,50 @@ input[type='submit'] {
 
 body {
   font-family: verdana;
+}
+
+@media (max-width: 600px) {
+  .nav {
+    flex-direction: column;
+    height: 200px;
+    align-items: flex-start;
+  }
+
+  .box {
+    width: 82%;
+  }
+
+  .row {
+    align-items: flex-start;
+    justify-content: space-evenly;
+    flex-direction: column;
+  }
+
+  input[type='text'], select[id='department'] {
+    border: none;
+  }
+
+  .box h1 {
+    margin: 0 0 20px 0;
+  }
+
+  select[id='department']{
+    background-color: white;
+  }
+
+  .center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  input[type='reset'] {
+    background-color: white;
+    border: none;
+  }
+
+  .card-display {
+    justify-content: center;
+    padding: 0 18px;
+  }
 }
